[sc-6444] Implement Inform users about the shared processing

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -222,6 +222,7 @@
 	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
+	"billing.upgrade_now": "Actualitzar ara",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consum",
 	"billing.usage.interval": "Cost corresponent al consum des de {{from}} a {{to}}",
@@ -650,6 +651,7 @@
 	"resource.search.in-title": "al títol",
 	"resource.select-all-failures": "Seleccioneu tots els {{count}} recursos per error",
 	"resource.selected_count": "{{num}} arxius seleccionats",
+	"resource.shared_queue": "La cua de processament és compartida entre els comptes de prova.",
 	"resource.status": "Estat",
 	"resource.status-help.failed": "Els fitxers no es poden processar",
 	"resource.status-help.pending": "Expedients pendents de processar",
