--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -234,6 +234,7 @@
 	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
+	"billing.upgrade_now": "Upgrade now",
 	"billing.usage.consumables": "Consumables",
 	"billing.usage.consumption": "Consumption",
 	"billing.usage.interval": "Cost corresponding to the consumption from {{from}} to {{to}}",
@@ -670,6 +671,7 @@
 	"resource.search.in-title": "in title",
 	"resource.select-all-failures": "Select all {{count}} resources in error",
 	"resource.selected_count": "{{num}} files selected",
+	"resource.shared_queue": "The processing queue is shared among trial accounts.",
 	"resource.status": "Status",
 	"resource.status-help.failed": "Files failing to be processed",
 	"resource.status-help.pending": "Files pending to be processed",
