--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -222,6 +222,7 @@
 	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
+	"billing.upgrade_now": "Actualizar ahora",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consumo",
 	"billing.usage.interval": "Coste correspondiente al consumo de {{from }} a {{to}}",
@@ -650,6 +651,7 @@
 	"resource.search.in-title": "en el titulo",
 	"resource.select-all-failures": "Seleccionar todos los {{count}} recursos por error",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
+	"resource.shared_queue": "La cola de procesamiento es compartida entre las cuentas de prueba.",
 	"resource.status": "Estado",
 	"resource.status-help.failed": "Archivos que no se pueden procesar",
 	"resource.status-help.pending": "Expedientes pendientes de tramitar",
