--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -545,7 +545,7 @@
 	"onboarding.title": "👋​ Welcome to Nuclia!",
 	"onboarding.updates": "Get occasional updates about Nuclia",
 	"onboarding.use_case": "What is your main use case?",
-	"onboarding.use_case.ai_training": "Own AI model training",
+	"onboarding.use_case.ai_training": "AI model training",
 	"onboarding.use_case.global_search": "Global site search",
 	"onboarding.use_case.other": "Other",
 	"onboarding.use_case.research_analysis": "Research & Analysis",
