--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -528,7 +528,7 @@
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
 	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
 	"onboarding.use_case": "¿Cuál es su principal caso de uso?",
-	"onboarding.use_case.ai_training": "Entrenamiento propio del modelo de IA",
+	"onboarding.use_case.ai_training": "Entrenamiento del modelo de IA",
 	"onboarding.use_case.global_search": "Búsqueda global del sitio",
 	"onboarding.use_case.other": "Otro",
 	"onboarding.use_case.research_analysis": "Investigación y análisis",
