[sc-6654] Add texts for new generative models

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -707,11 +707,13 @@
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
-	"stash.config.azure_openai": "Azure OpenAI key",
-	"stash.config.chatgpt": "ChatGPT OpenAI",
-	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
-	"stash.config.openai": "OpenAI key",
+	"stash.config.key.azure_openai": "Azure OpenAI key",
+	"stash.config.key.openai": "OpenAI key",
+	"stash.config.option.chatgpt": "ChatGPT OpenAI",
+	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.option.cohere": "Cohere",
+	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
+	"stash.config.option.palm": "Google PaLM 2",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
 	"stash.create": "Crea una caixa de coneixement",
