--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -707,11 +707,13 @@
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
-	"stash.config.azure_openai": "Azure OpenAI key",
-	"stash.config.chatgpt": "ChatGPT OpenAI",
-	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
-	"stash.config.openai": "OpenAI key",
+	"stash.config.key.azure_openai": "Azure OpenAI key",
+	"stash.config.key.openai": "OpenAI key",
+	"stash.config.option.chatgpt": "ChatGPT OpenAI",
+	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.option.cohere": "Cohere",
+	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
+	"stash.config.option.palm": "Google PaLM 2",
 	"stash.config.own_key": "Utilizar key propia",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
 	"stash.create": "Crea una caja de conocimiento",
