--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -727,11 +727,13 @@
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
-	"stash.config.azure_openai": "Azure OpenAI key",
-	"stash.config.chatgpt": "ChatGPT OpenAI",
-	"stash.config.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.generative-multilingual-2023": "Nuclia multilingual private model",
-	"stash.config.openai": "OpenAI key",
+	"stash.config.key.azure_openai": "Azure OpenAI key",
+	"stash.config.key.openai": "OpenAI key",
+	"stash.config.option.chatgpt": "ChatGPT OpenAI",
+	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
+	"stash.config.option.cohere": "Cohere",
+	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
+	"stash.config.option.palm": "Google PaLM 2",
 	"stash.config.own_key": "Use own key",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
