add beta mention on cohere and palm

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -711,9 +711,9 @@
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohere",
+	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
-	"stash.config.option.palm": "Google PaLM 2",
+	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
 	"stash.create": "Crea una caixa de coneixement",
