--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -711,9 +711,9 @@
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohere",
+	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
-	"stash.config.option.palm": "Google PaLM 2",
+	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilizar key propia",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
 	"stash.create": "Crea una caja de conocimiento",
