[sc-6227] Implement the settings improvements

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -715,6 +715,8 @@
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
+	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la caixa de coneixament.",
+	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
 	"stash.create": "Crea una caixa de coneixement",
 	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
@@ -764,7 +766,6 @@
 	"stash.search.toggle-answer": "Resposta generativa",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
-	"stash.search_users_description": "Afegeix el correu electrònic del nou usuari",
 	"stash.seats_available": "Queden {{ seats }} seients",
 	"stash.see_stats": "Veure dades",
 	"stash.selectStash": "Selecciona caixa de coneixement",
@@ -809,9 +810,12 @@
 	"stash.title": "Títol de la caixa",
 	"stash.upload_data": "Pujar dades",
 	"stash.upload_to_search": "Puja dades per comença a utilitzar el motor de cerca.",
+	"stash.users.new_user": "Afegir nou usuari",
 	"stash.users.role": "Rol",
-	"stash.users.title": "Usuaris",
-	"stash.users.users": "usuaris",
+	"stash.users.sort_by_name": "A-Z",
+	"stash.users.sort_by_role": "Ordenar per rol",
+	"stash.users.user_deleted": "L'usuari s'ha suprimit correctament",
+	"stash.users.users_list": "Llista d'usuaris",
 	"stash.valid_domains": "Afegeix, separats per comes, els dominis dels quals s’acceptaran correu electrònic.",
 	"stash.valid_domains_label": "Dominis des d’on es pot enviar correu electrònic",
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
