--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -735,6 +735,8 @@
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Use own key",
+	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your knowledge box.",
+	"stash.confirm_delete_user.title": "Are you sure  you want to delete this user?",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
 	"stash.create.anonymization_model": "Anonymization ",
@@ -792,7 +794,6 @@
 	"stash.search.toggle-answer": "Generative answer",
 	"stash.search_users": "Add a new user",
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
-	"stash.search_users_description": "Add new user’s email",
 	"stash.seats_available": "{{ seats }} seats available",
 	"stash.see_stats": "See data",
 	"stash.selectStash": "Select a knowledge box",
@@ -839,9 +840,12 @@
 	"stash.title": "Title of the box",
 	"stash.upload_data": "Upload data",
 	"stash.upload_to_search": "Upload data to start using the AI-search engine.",
+	"stash.users.new_user": "Add new user",
 	"stash.users.role": "Role",
-	"stash.users.title": "Users",
-	"stash.users.users": "users",
+	"stash.users.sort_by_name": "A-Z",
+	"stash.users.sort_by_role": "Sort by role",
+	"stash.users.user_deleted": "User successfully deleted",
+	"stash.users.users_list": "Users list",
 	"stash.valid_domains": "Domains whose email will be accepted. (Comma-separated)",
 	"stash.valid_domains_label": "Domains from which email can be sent",
 	"stash.valid_emails": "Add, separated by comas, the emails addresses from witch emails will be accepted. ",
