--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -715,6 +715,8 @@
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilizar key propia",
+	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la caja de conocimiento.",
+	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
 	"stash.create": "Crea una caja de conocimiento",
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
@@ -764,7 +766,6 @@
 	"stash.search.toggle-answer": "Respuesta generativa",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
-	"stash.search_users_description": "Añade el correo electrónico del nuevo usuario",
 	"stash.seats_available": "Quedan {{ seats }} asientos",
 	"stash.see_stats": "Ver los datos",
 	"stash.selectStash": "Selecciona una caja de conocimiento",
@@ -809,9 +810,12 @@
 	"stash.title": "Título de la caja",
 	"stash.upload_data": "Subir datos",
 	"stash.upload_to_search": "Sube datos para empezar a utilizar el motor de búsqueda.",
+	"stash.users.new_user": "Añadir nuevo usuario",
 	"stash.users.role": "Rol",
-	"stash.users.title": "Usuarios",
-	"stash.users.users": "usuarios",
+	"stash.users.sort_by_name": "A-Z",
+	"stash.users.sort_by_role": "Ordenar por rol",
+	"stash.users.user_deleted": "Usuario eliminado con éxito",
+	"stash.users.users_list": "Lista de usuarios",
 	"stash.valid_domains": "Añada, separado por comas, los dominios de los cuales se aceptaran correos electrónicos.",
 	"stash.valid_domains_label": "Dominios desde donde se puede enviar correo electrónico",
 	"stash.valid_emails": "Añada, separado por comas, las direcciones de correos electrónicos de los cuales se aceptará correo electrónico. ",
