[sc-6548] Cheat code to unlock feature flags

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -246,6 +246,7 @@
 	"farewell.see_again": "Esperem tornar-te a veure.",
 	"farewell.thanks_time": "Gràcies pel teu temps!",
 	"farewell.thanks_trust": "Gràcies per la teva confiança!",
+	"features.customize_features": "Personalitzar funcionalitats",
 	"feedback.anything_else": "¿Algo más que quieras compartir? (Opcional)",
 	"feedback.reason.customer_service": "El servei al client va ser pitjor de l'esperat",
 	"feedback.reason.low_quality": "La qualitat va ser inferior a l'esperada",
