--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -258,6 +258,7 @@
 	"farewell.see_again": "We hope to see you again.",
 	"farewell.thanks_time": "Thank you for your time!",
 	"farewell.thanks_trust": "Thank you for your trust!",
+	"features.customize_features": "Customize features",
 	"feedback.anything_else": "Anything else you want to share? (Optional)",
 	"feedback.reason.customer_service": "Customer service was less than expected",
 	"feedback.reason.low_quality": "Quality was less than expected",
