--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -246,6 +246,7 @@
 	"farewell.see_again": "Esperamos verte de nuevo.",
 	"farewell.thanks_time": "¡Gracias por tu tiempo!",
 	"farewell.thanks_trust": "¡Gracias por tu confianza!",
+	"features.customize_features": "Personalizar funcionalidades",
 	"feedback.anything_else": "Alguna cosa més que vulguis compartir? (Opcional)",
 	"feedback.reason.customer_service": "El servicio al cliente fue peor de lo esperado",
 	"feedback.reason.low_quality": "La calidad fue inferior a la esperada",
