[sc-6760] Modify delete account flow

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -29,6 +29,7 @@
 	"account.delete.deletion_scheduled": "Se ha programado la eliminación de su cuenta.",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
 	"account.delete.expiration": "La teva subscripció caduca el",
+	"account.delete.go_to": "Si vols eliminar el teu compte, si us plau ves a",
 	"account.delete.keep_user": "Mantenir el meu usuari",
 	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
 	"account.delete.subscription_detected": "S'ha detectat una subscripció activa",
@@ -285,7 +286,6 @@
 	"generic.create": "Crear",
 	"generic.create_account": "Crear compte",
 	"generic.creation_date": "Data creació",
-	"generic.dangerous": "Zona perillosa",
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Data",
 	"generic.delete": "Esborrar",
