--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -30,6 +30,7 @@
 	"account.delete.deletion_scheduled": "Deletion of your account has been scheduled.",
 	"account.delete.error": "Error when deleting the account",
 	"account.delete.expiration": "Your subscription expires on",
+	"account.delete.go_to": "If you want to delete your account, please go to",
 	"account.delete.keep_user": "Keep my user",
 	"account.delete.keep_user_title": "Would you like to keep your user profile?",
 	"account.delete.subscription_detected": "Active subscription detected",
@@ -298,7 +299,6 @@
 	"generic.create": "Create",
 	"generic.create_account": "Create account",
 	"generic.creation_date": "Creation date",
-	"generic.dangerous": "Dangerous zone",
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Date",
 	"generic.delete": "Delete",
