--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -29,6 +29,7 @@
 	"account.delete.deletion_scheduled": "S'ha programat la supressió del vostre compte.",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete.expiration": "Tu suscripción caduca el",
+	"account.delete.go_to": "Si quieres eliminar tu cuenta, por favor ve a",
 	"account.delete.keep_user": "Mantener mi usuario",
 	"account.delete.keep_user_title": "¿Quieres mantener tu perfil de usuario?",
 	"account.delete.subscription_detected": "Suscripción activa detectada",
@@ -285,7 +286,6 @@
 	"generic.create": "Crear",
 	"generic.create_account": "Crear una cuenta",
 	"generic.creation_date": "Fecha creación",
-	"generic.dangerous": "Zona peligrosa",
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Fecha",
 	"generic.delete": "Borrar",
