[sc-6709]: Update upload queue messages
Delete upload translations not used anymore

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -461,12 +461,8 @@
 	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
 	"modal.create_link.title": "Afegeix enllaços",
 	"modal.show_waiting_list": "Comprova la cua de fitxers",
-	"modal.upload.choose_language": "En cas de ser àudios o un vídeos, selecciona l'idioma del fitxer ",
 	"modal.upload.drop": "Llança els fitxers aqui",
 	"modal.upload.drop_folder": "Arrossega una carpeta",
-	"modal.upload.error": "Error al pujar el fitxer",
-	"modal.upload.file_duplicated": "Aquest fitxer està duplicat. Existeix un fitxer idèntic a la caixa de coneixement",
-	"modal.upload.file_invalid": "Fitxer no vàlid",
 	"modal.upload.queue_length": "Mida de la cua",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
@@ -894,7 +890,7 @@
 	"upload.answer_format": "Format de resposta",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
-	"upload.conflict": "Ja existeix un fitxer amb el mateix nom.",
+	"upload.conflict": "S'ha trobat un fitxer amb el mateix nom.",
 	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 4 columnes: <code>Títol, Cos, Format, Etiquetes</code>",
 	"upload.csv_format": "La columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetes</code>segueix aquest patró:\n<code>labelset1/label1|labelset2/label2...</code>",
@@ -906,7 +902,7 @@
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
 	"upload.labels_number": "{{num}} etiquetes",
 	"upload.link": "Afegeix enllaços",
-	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
+	"upload.once_uploaded": "Un cop penjats, podeu veure l'estat dels vostres fitxers a la pàgina Recursos pendents. Quan es processin els fitxers, apareixeran a la llista de Recursos.",
 	"upload.progress-dialog-title": "Cua de pujades",
 	"upload.q_and_a": "Carregueu preguntes i respostes",
 	"upload.qna_csv_description": "Creeu un recurs de preguntes i respostes seleccionant un fitxer CSV amb 2 columnes: <code>Pregunta, resposta</code>",
