--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -478,12 +478,8 @@
 	"modal.create_link.textarea": "Paste some links (one per line)",
 	"modal.create_link.title": "Add links",
 	"modal.show_waiting_list": "Check file uploads",
-	"modal.upload.choose_language": "Select language of the file for audio and video files",
 	"modal.upload.drop": "Drop files here",
 	"modal.upload.drop_folder": "Drop folders here",
-	"modal.upload.error": "Error uploading file",
-	"modal.upload.file_duplicated": "This file is a duplicate. There is an identical file in the knowledge box",
-	"modal.upload.file_invalid": "Invalid file",
 	"modal.upload.queue_length": "Queue length",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
@@ -932,7 +928,7 @@
 	"upload.answer_format": "Answer format",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
-	"upload.conflict": "A file with the same name already exists.",
+	"upload.conflict": "Found a file with the same name.",
 	"upload.csv_description": "Create multiple resources by selecting a CSV file with 4 columns: <code>Title, Body, Format, Labels</code>",
 	"upload.csv_format": "<code>Format</code> column must be one of theses values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "<code>Labels</code> column follows this pattern:\n<code>labelset1/label1|labelset2/label2...</code>",
@@ -944,10 +940,8 @@
 	"upload.invalid_image": "Selected file is not a valid image",
 	"upload.labels_number": "{{num}} labels",
 	"upload.link": "Add links",
-	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
+	"upload.once_uploaded": "Once uploaded, you can see the status of your files in the Pending resources page. When the files are processed, they will show up in the Resources list.",
 	"upload.progress-dialog-title": "Upload queue",
-	"upload.progress.conflicts": "Conflicts",
-	"upload.progress.failed": "Failed",
 	"upload.q_and_a": "Upload Q&A",
 	"upload.qna_csv_description": "Create a Q&A resource by selecting a CSV file with 2 columns: <code>Question, Answer</code>",
 	"upload.qna_csv_preview.answer": "Answer",
