--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -461,12 +461,8 @@
 	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
 	"modal.create_link.title": "Añadir enlaces",
 	"modal.show_waiting_list": "Compruebe la cola de ficheros",
-	"modal.upload.choose_language": "En caso de ser audios o vídeos, selecciona el idioma del fichero",
 	"modal.upload.drop": "Drop files here",
 	"modal.upload.drop_folder": "Arrastra una carpeta",
-	"modal.upload.error": "Error al cargar el archivo",
-	"modal.upload.file_duplicated": "Este archivo está duplicado. Hay un archivo idéntico en la caja de conocimiento.",
-	"modal.upload.file_invalid": "Archivo inválido",
 	"modal.upload.queue_length": "Tamaño de la cola",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
@@ -894,7 +890,7 @@
 	"upload.answer_format": "Formato de respuesta",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
-	"upload.conflict": "Ya existe un archivo con el mismo nombre.",
+	"upload.conflict": "Encontré un archivo con el mismo nombre.",
 	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 4 columnas: <code>Título, Cuerpo, Formato, Etiquetas</code>",
 	"upload.csv_format": "La columna <code>Formato</code> puede ser uno de estos valores: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetas</code>sigue este patrón:\n<code>labelset1/label1|labelset2/label2...</code>",
@@ -906,7 +902,7 @@
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
 	"upload.labels_number": "{{num}} etiquetas",
 	"upload.link": "Agregar enlaces",
-	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
+	"upload.once_uploaded": "Una vez cargados, puede ver el estado de sus archivos en la página de recursos pendientes. Cuando se procesen los archivos, aparecerán en la lista de Recursos.",
 	"upload.progress-dialog-title": "Cola de subidas",
 	"upload.q_and_a": "Cargar preguntas y respuestas",
 	"upload.qna_csv_description": "Cree un recurso de preguntas y respuestas seleccionando un archivo CSV con 2 columnas: <code>Pregunta, Respuesta</code>",
