--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -854,6 +854,8 @@
 	"stash.widgets.relations": "Relacions",
 	"stash.widgets.relations.help": "Mostra informació de les entitats relacionades en els resultats de cerca",
 	"stash.widgets.snippet": "Fragment de codi",
+	"stash.widgets.suggestEntities": "Suggereix entitats",
+	"stash.widgets.suggestEntities.help": "Suggerir entitats mentre s'escriu la consulta de cerca",
 	"stash.widgets.suggestions": "Suggeriments",
 	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
 	"stash.widgets.suggestLabels": "Suggereix etiquetes",
