Display entity suggestions in the widget

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -57,8 +57,9 @@
 	"results.semantic": "Resultats semàntics",
 	"results.sentences": "Frases rellevants",
 	"results.summary": "Resum",
+	"suggest.entities": "Entitats suggerides",
 	"suggest.intents": "Etiquetes",
-	"suggest.paragraphs": "Paràgraf suggerit",
+	"suggest.titles": "Títols suggerits",
 	"viewer.find-in-audio": "Troba a l'àudio",
 	"viewer.find-in-document": "Troba al document",
 	"viewer.find-in-image": "Buscar a la imatge",
