--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -57,8 +57,9 @@
 	"results.semantic": "Resultados semánticos",
 	"results.sentences": "Frases relevantes",
 	"results.summary": "Resumen",
+	"suggest.entities": "Entidades sugeridas",
 	"suggest.intents": "Etiquetas",
-	"suggest.paragraphs": "Párrafo sugerido",
+	"suggest.titles": "Títulos sugeridos",
 	"viewer.find-in-audio": "Buscar en audio",
 	"viewer.find-in-document": "Buscar en documento",
 	"viewer.find-in-image": "Buscar en la imagen",
