--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -55,8 +55,9 @@
 	"results.semantic": "Résultats sémantiques",
 	"results.sentences": "Phrases pertinentes",
 	"results.summary": "Résumé",
+	"suggest.entities": "Entités suggérées",
 	"suggest.intents": "Labels",
-	"suggest.paragraphs": "Paragraphes suggérés",
+	"suggest.titles": "Titres suggérés",
 	"viewer.find-in-audio": "Rechercher dans l'audio",
 	"viewer.find-in-document": "Rechercher dans le document",
 	"viewer.find-in-image": "Rechercher dans l'image",
