--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -58,8 +58,9 @@
 	"results.semantic": "Semantic results",
 	"results.sentences": "Relevant sentences",
 	"results.summary": "Summary",
+	"suggest.entities": "Suggested entities",
 	"suggest.intents": "Labels",
-	"suggest.paragraphs": "Suggested paragraphs",
+	"suggest.titles": "Suggested titles",
 	"viewer.find-in-audio": "Find in audio",
 	"viewer.find-in-document": "Find in document",
 	"viewer.find-in-image": "Find in image",
