Move user module in user lib

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1,57 +1,4 @@
 {
 	"generic.email": "Email",
-	"generic.or": "Or",
-	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
-	"login.boarding_title": "Boarding Nuclia",
-	"login.check_email": "Check your emails!",
-	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
-	"login.continue_with": "Log in with {{provider}}",
-	"login.create_one": "Create",
-	"login.description": "Know what your company knows",
-	"login.email": "Email",
-	"login.email_already_exists": "This email address already exists! ",
-	"login.email_sent": "We’ve sent you an email!",
-	"login.email_signup": "Professional email",
-	"login.email_signup_help": "Only company email addresses allowed",
-	"login.error.auth_error": "Authentication error.",
-	"login.error.get_consent_error": "An error occurred while retrieving consent information",
-	"login.error.google_workspace": "Sign up with Google is restricted to workspace domains, sorry.",
-	"login.error.login_error": "An error occurred while logging in",
-	"login.error.no_personal_email": "Nuclia access is restricted to company emails",
-	"login.error.oops": "Oops! Something went wrong!",
-	"login.error.submit_consent_error": "An error occurred while giving permission",
-	"login.error.unknown_consent_challenge": "Invalid consent_challenge",
-	"login.error.unknown_login_challenge": "Invalid login_challenge",
-	"login.full_name": "Full name",
-	"login.google-workspace": "Google Workspace",
-	"login.have_account": "Don’t have an account?",
-	"login.have_account_already": "Already have an account?",
-	"login.login": "Log in",
-	"login.password": "Password",
-	"login.recover": "Recover password",
-	"login.recover_help": "Problems logging in?",
-	"login.resend_email": "Resend the email",
-	"login.scope.kbs_read": "View your Knowledge boxes",
-	"login.scope.kbs_write": "Modify your Knowledge boxes",
-	"login.sign-up-with": "Sign up with {{provider}}",
-	"login.signup": "Sign Up",
-	"login.subtitle": "Delivering the right answers from your internal data.",
-	"login.title": "Welcome to Nuclia",
-	"login.token_expired": "Token has expired",
-	"login.try_again": "Please try again or reset your password below.",
-	"login.wrong_email": "Wrong email?",
-	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
-	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
-	"recover.gologin": "Go to the login page",
-	"recover.gologin_help": "Do you remember your password?",
-	"recover.recover": "Recover",
-	"recover.title": "Recover your password",
-	"recover.verify": "Check your email and use the provided link to change your password",
-	"validation.company-email": "Please use a company email",
-	"validation.email": "Enter a valid email",
-	"validation.password_minlength": "Password must be at least 8 characters long",
-	"validation.password_mismatch": "Password does not match",
-	"validation.password_required": "Choose a password",
-	"validation.required": "Required field",
-	"validation.required_short": "Required"
+	"generic.or": "Or"
 }
